# titanic

./: .gitignore  LICENSE  LICENSE.txt  Makefile  README.md  jupytext.toml  pyproject.toml  requirements.txt  setup.py
.githooks/: pre-commit
.github/workflows/: test.yml
docs/: api.html  cli.html  genindex.html  index.html  install.html  mkdocs.yml  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.rst.txt  install.rst.txt
docs/_sources/source/: 02-feature-engineering.ipynb.txt  titanic.data.rst.txt  titanic.features.rst.txt  titanic.visualization.rst.txt
docs/source/: 01-initial-data-exploration.html  01-initial-data-exploration.ipynb  02-feature-engineering.html  02-feature-engineering.ipynb  modules.html  titanic.data.html  titanic.features.html  titanic.html  titanic.models.html  titanic.visualization.html
docsrc/: Makefile  cli.rst  conf.py  index.rst
docsrc/source/: 02-feature-engineering.ipynb  modules.rst  titanic.models.rst  titanic.rst
models/fitted/: ensemble.joblib  logistic_regression.joblib  random_forest.joblib  support_vector_classifier.joblib
models/predictions/: ensemble.csv  logistic_regression.csv  random_forest.csv  support_vector_classifier.csv
notebook-scripts/: 01-initial-data-exploration.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  submission.csv
references/: data_dictionary.md
src/titanic/: __main__.py  data.py  features.py
src/titanic/cli/: __init__.py
titanic/features/: transform.py
titanic/models/: predict.py  train.py
